[package]
name = "sol-postmortem"
version = "0.1.0"
edition = "2021"
description = "Solana transaction postmortem — decode the CPI tree, account diffs, and the actual failure reason for any tx by signature."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/CoinAnt/sol-postmortem"
keywords = ["solana", "cli", "postmortem", "transaction", "debugging"]
categories = ["command-line-utilities", "development-tools::debugging"]

[[bin]]
name = "solpmortem"
path = "src/main.rs"

[dependencies]
solana-pubkey = { version = "2", default-features = false, features = ["std"] }
solana-transaction-status = { version = "2", default-features = false }
solana-transaction-error = { version = "2", default-features = false }
solana-instruction = { version = "2", default-features = false, features = ["std"] }
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
borsh = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
bs58 = "0.5"
hex = "0.4"
sha2 = "0.10"
flate2 = "1"
base64 = "0.22"

[profile.release]
lto = "thin"
strip = "symbols"
